--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,8 +8,10 @@ jobs:
   macos:
     runs-on: macOS-latest
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-go@v2
+      - name: Get dependencies
+        uses: actions/checkout@v1
+      - name: Install Golang
+        uses: actions/setup-go@v2
         with:
           go-version: '^1.16.8'
       - name: Get dependencies
