--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Get dependencies
         run: go mod download
       - name: Install fyne
-        run: go get fyne.io/fyne/v2
+        run: go get fyne.io/fyne/v2/cmd/fyne
       - name: Build and Test
         run: fyne package -os ios
         env:
